[project]
name = "leesah-game"
version = "0.1.0"
description = "Leesah er et Pythonbibliotek for å spille det hendelsedrevet applikasjonsutviklingspillet Leesah Game"
authors = [{name = "NAV", email = ""}]
license = "MIT"
readme = "README.md"
packages = [{include = "leesah"}]
repository = "https://github.com/navikt/leesah-game-python"
requires-python = ">=3.9"
dependencies = [
    "confluent-kafka>=2.10.0",
    "pydantic>=2.11.4",
    "pyyaml>=6.0.2",
]
